--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,9 @@
   <h1>Hello from Angular App with Webpack</h1>
   <img src="../../public/images/angular.png">
 </main>
+<h1>{{title}}</h1>
+<nav>
+    <a routerLink="/dashboard" routerLinkActive="active">Dashboard</a>
+    <a routerLink="/heroes" routerLinkActive="active">Heroes</a>
+</nav>
+<router-outlet></router-outlet>
